crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__receipt_minimal.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: json
---
{
  "receipt_version": "shipper.receipt.v2",
  "plan_id": "plan-min",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "started_at": "2025-01-15T12:00:00Z",
  "finished_at": "2025-01-15T12:00:00Z",
  "packages": [
    {
      "name": "demo",
      "version": "0.1.0",
      "attempts": 1,
      "state": {
        "state": "published"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:00:00Z",
      "duration_ms": 1500,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    }
  ],
  "event_log_path": ".shipper/events.jsonl",
  "git_context": null,
  "environment": {
    "shipper_version": "0.3.0",
    "cargo_version": "1.82.0",
    "rust_version": "1.82.0",
    "os": "linux",
    "arch": "x86_64"
  },
  "execution_result": "success"
}
